# cfa-stf-routine-forecasting

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Containerfile  Dockerfile  Justfile  Makefile  README.md  _typos.toml  ci_test.py  create_pool.py  dagster_defs.py  dagster_test.py  jarl-test.R  jarl_test.R  local_outlier_experiment.py  outlier_experiment.py  process_outlier_experiment.py  pyproject.toml  tmp.py  workspace.yaml
.github/: CODEOWNERS  dependabot.yml
.github/actions/setup-hewr/: action.yaml
.github/actions/setup-pyrenew-hew/: action.yaml
.github/actions/setup-routine-forecasting-julia/: action.yaml
.github/actions/setup-routine-forecasting-python/: action.yaml
.github/actions/setup-routine-forecasting-r/: action.yaml
.github/workflows/: ci_test.yaml  containers.yaml  delete-container-tag.yaml  pipeline-run-check.yaml  r-cmd-check.yaml  runic.yaml  test.yaml
EpiAutoGP/: Project.toml  run.jl
EpiAutoGP/src/: EpiAutoGP.jl  input.jl  modelling.jl  output.jl
EpiAutoGP/test/: runtests.jl  test_input.jl  test_modelling.jl  test_output.jl  test_parse_arguments.jl
blobfuse/: README.md  cleanup.sh  mount.sh  pull_config.sh
blobfuse/archive/: unmount.sh
cfa/: __init__.py
cfa/stf/: __init__.py
cfa/stf/data/: __init__.py  filter_data.py  filter_pmfs.py  get_data.py  get_nnh_pmfs.py  get_nnsp_with_exclusion.py  get_nssp_with_exclusion.py  get_pmfs.py  test_get_nssp_with_exclusion.py
cfa/stf/forecasttools/: __init__.py  arviz_helpers.py  ft_lite.py  location_table.py  test_arviz.py  utils.py
cfa/stf/pipelines/: __init__.py
hewr/: DESCRIPTION
hewr/R/: to_hub_quantile_table.R  to_hubverse_tbl.R
hewr/man/: prelim_samples_to_hubverse.Rd  prelim_to_hub_quantiles.Rd
hewr/tests/testthat/: helper.R  test_to_hub_quantile_table.R  test_to_hubverse_tbl.R
pipelines/: README.md  juliapkg.json
pipelines/batch/: setup_pool.py  setup_timeseries_job.py
pipelines/data/: data_access.py  generate_test_data.py  generate_test_data_lib.py  prep_data.py
pipelines/epiautogp/: Manifest.toml  Project.toml  README.md  __init__.py  epiautogp_forecast_utils.py  fit_epiautogp.jl  forecast_epiautogp.py  forecast_spec.py  hubverse_nowcast.py  hubverse_pointer.py  juliacall_runner.py  nowcast.py  nssp_nowcast.py  prep_epiautogp_data.py  reporting_delay.py  reporting_delay_nowcast.py
pipelines/fable/: fit_fable.R  fit_timeseries.R  forecast_fable.py  forecast_timeseries.py
pipelines/pyrenew_hew/: create_samples_from_pyrenew_fit_dir.R  forecast_pyrenew.py  generate_predictive.py
pipelines/tests/: README.md  conftest.py  test_cfa_stf_namespace.py  test_end_to_end.sh  test_epiautogp_fit.sh  test_epiautogp_juliacall_runner_parquet.py  test_epiautogp_nhsn_nowcast_vm.py  test_epiautogp_parquet_interop.py  test_forecast_utils.py  test_generate_test_data_lib.py  test_hubverse_nhsn_nowcast.py  test_hubverse_nowcast.py  test_prep_data.py  test_prep_epiautogp_data.py  test_reporting_delay_nowcast.py
pipelines/tests/data/: test_data_access.py  test_generate_test_data_lib.py
pipelines/tests/epiautogp/: test_epiautogp_end_to_end.sh  test_epiautogp_fit.sh  test_epiautogp_parquet.py  test_epiautogp_parquet_interop.py  test_forecast_utils.py  test_prep_epiautogp_data.py
pipelines/tests/fable/: test_fable_fit.sh
pipelines/tests/integration/: test_end_to_end.sh  test_pipeline_end_to_end.py
pipelines/tests/pyrenew_hew/: test_pyrenew_fit.sh
pipelines/tests/utils/: test_common_utils.py  test_postprocess_forecast_batches.py
pipelines/utils/: cli_utils.py  common_utils.py  create_prop_samples.R  make_figures_from_model_fit_dir.R  model_fit_dir_to_hub_tbl.R  postprocess_forecast_batches.py
scripts/: create_pool.py  edit_dagster_task_config.py
stfroutineforecasting/: DESCRIPTION  NAMESPACE
stfroutineforecasting/man/: prelim_to_hub_samples.Rd  raw_samples_to_prelim.Rd  stfroutineforecasting-package.Rd
stfroutineforecasting/tests/: testthat.R
tests/: test_dagster_defs.py
tests/cfa/stf/data/: conftest.py  data_test_utils.py  test_get_nhsn_hrd.py  test_get_nnh_pmfs.py  test_get_nssp.py  test_get_nssp_with_exclusion.py
