[project]
name = "cfa-stf-routine-forecasting"
version = "0.1.0"
description = "Pipelines for forecasting respiratory diseases"
readme = "README.md"
requires-python = ">=3.13,<3.14"
authors = [
  {name = "Damon Bayer", email = "xum8@cdc.gov"},
  {name = "Dylan H. Morris"},
  {name = "Subekshya Bidari"},
  {name = "Jon Kislin", email = "qxk3@cdc.gov"}
]

dependencies = [
    "jax<0.10",
    "arviz[h5netcdf]>=1.0",
    "cfa-catalog-public>=2026.3.23.0",
    "cfa-dagster",
    "cfa-dataops",
    "dagster==1.12.2",
    "polarbayes",
    "polars[pyarrow,numpy]>=1.36",
    "pygit2>=1.17.0",
    "pyrenew",
    "pyrenew-multisignal",
    "pypdf>=6.10.1",
    "tomli-w>=1.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["pipelines", "cfa"]
include = ["cfa/stf/forecasttools/test_data/*.nc"]

[tool.hatch.build.targets.sdist]
include = ["cfa/stf/forecasttools/test_data/*.nc"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
  {include-group = "test"},
  "dagster-postgres>=0.27.4",
  "dagster-webserver==1.12.2",
  "ipykernel",
  "ipywidgets",
  "jupyter>=1.0.0",
]
test = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "pytest-mpl>=0.17.0"
]


[tool.ruff]
fix = true

[tool.ruff.lint]
select = ["I", "E4", "E7", "E9", "F", "UP"]

[tool.pytest.ini_options]
testpaths = ["pipelines/tests", "cfa"]

[tool.uv.sources]
cfa-dagster = { git = "https://github.com/cdcgov/cfa-dagster.git", rev = "main" }
pyrenew-multisignal = {git = "https://github.com/CDCgov/pyrenew-multisignal", rev = "5938ec3"}
polarbayes = { git = "https://github.com/cdcgov/polarbayes" }
cfa-dataops = {git = "https://github.com/CDCgov/cfa-dataops.git", rev = "main"}
cfa-catalog-public = {git = "https://github.com/cdcgov/cfa-catalog-pub.git"}
