[project]
name = "cfa-stf-routine-forecasting"
version = "0.1.0"
description = "Pipelines for forecasting respiratory diseases"
readme = "README.md"
requires-python = ">=3.13,<3.14"
authors = [
  {name = "Damon Bayer", email = "xum8@cdc.gov"},
  {name = "Dylan H. Morris"},
  {name = "Subekshya Bidari"},
  {name = "Jon Kislin", email = "qxk3@cdc.gov"}
]

dependencies = [
    "arviz[h5netcdf]>=1.1.0",
    "cfa-cloudops",
    "cfa-dagster",
    "cfa-stf-data",
    "cfa-stf-forecasttools",
    "dagster",
    "jax",
    "numpy",
    "numpyro",
    "polarbayes",
    "polars[pyarrow,numpy]>=1.36",
    "pydantic",
    "pygit2>=1.17.0",
    "pyrenew",
    "pyrenew-multisignal",
    "pypdf>=6.10.1",
    "scipy",
    "tomli-w>=1.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["pipelines"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "dagster_defs"
defs_module = "dagster_defs"
code_location_target_module = "dagster_defs"

[dependency-groups]
dev = [
  {include-group = "dagster-config-editor"},
  {include-group = "test"},
  "ipykernel",
  "ipywidgets",
  "jupyter>=1.0.0",
  "cfa-dagster[dev]",
  "pre-commit>=4.6.0",
]
dagster-config-editor = [
    "py-yaml12",
    "rich",
]
test = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "pytest-mpl>=0.17.0"
]


[tool.ruff]
fix = true

[tool.ruff.lint]
select = ["I", "E4", "E7", "E9", "F", "UP"]

[tool.pytest.ini_options]
markers = [
    "pipeline_e2e: end-to-end pipeline integration test",
]

[tool.uv]
override-dependencies = [
    "arviz-base[h5netcdf]==1.3.0.dev0",
    "arviz-plots==1.3.0.dev0",
    "arviz-stats[xarray]==1.3.0.dev0",
]

[tool.uv.sources]
cfa-dagster = { git = "https://github.com/cdcgov/cfa-dagster", rev = "v1.4.0" }
cfa-cloudops = { git = "https://github.com/CDCgov/cfa-cloudops", rev = "main" }
pyrenew-multisignal = {git = "https://github.com/CDCgov/pyrenew-multisignal", rev = "5938ec3"}
polarbayes = { git = "https://github.com/cdcgov/polarbayes", rev = "main" }
arviz = { git = "https://github.com/arviz-devs/arviz", rev = "main" }
arviz-base = { git = "https://github.com/arviz-devs/arviz-base", rev = "main" }
arviz-plots = { git = "https://github.com/arviz-devs/arviz-plots", rev = "main" }
arviz-stats = { git = "https://github.com/arviz-devs/arviz-stats", rev = "main" }
cfa-stf-data = { git = "https://github.com/CDCgov/cfa-stf-data", rev = "main" }
cfa-stf-forecasttools = { git = "https://github.com/CDCgov/cfa-stf-forecasttools", rev = "main" }
